# Paper2Any

./: .env.example  .gitattributes  .gitignore  CITATION.cff  CLAUDE.md  README.md  README_CN.md  README_EN.md  app.py  dataflow_agent.log.1  docker-compose.yml  dockerfile  iphone.md  memory_leak_test.py  mkdocs.yml  packages.txt  pyproject.toml  readme_ori.md  requirements-base.txt  requirements-data.txt  requirements-dev.txt  requirements-lite.txt  requirements-paper-backup.txt  requirements-paper.txt  requirements-win-base.txt  requirements.txt  run.sh
.git_disabled/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  ORIG_HEAD  config  index  packed-refs
.taskmaster/: state.json
config/: pricing.json  pricing_0.json
database/: 00_cleanup.sql  01_init_schema.sql
dataflow_agent/: __init__.py  cli.py  logger.py  state.py  style.py  utils.py
dataflow_cache/: dataflow_cache_step_step1.jsonl  dataflow_cache_step_step2.jsonl
docs/: billing-setup.md  changelog.md  cli.md  contributing.md  faq.md  index.md  installation.md  quickstart.md  tech_route_template_palette_react.md
faiss_cache/: text2sql.index
fastapi_app/: .env.example  __init__.py  auth.py  config.py  main.py  main_lite.py  main_mock.py  schemas.py  supabase_client.py  utils.py  workflow_adapters.py  workflow_adapters_old.py
frontend-workflow/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gradio_app/: app.py
pa_cache/: financial_data_filter_prompt20251113001129.py  financial_data_filter_prompt20251113001548.py  prompt_test_data.jsonl  (+1 more)
tests/: test.py  (+33 more)
(+472 files in other folders)
