[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataflow-agent"        # pip install dataflow-agent
version = "0.1.0"
description = "LLM agent component for DataFlow."
authors = [{ name = "Zhou Liu", email = "liuzhoul82@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "dataflow-core>=0.5.0",    
    "openai>=1.0.0",
    "langgraph==0.6.7",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.6",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-core==0.3.76",
    "langchain-openai==0.3.33",
    "langchain-text-splitters==0.3.11",
    "faiss-cpu==1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]
paper=[

]
data=[
    "pandas",
    "numpy"
]


[tool.setuptools.package-dir]
# 告诉 setuptools 源码包目录
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["dataflow_agent*"]
exclude = ["tests*"]

[project.scripts]
dfa = "dataflow_agent.cli:cli"